--- a/Views/Sellers/Index.cshtml
+++ b/Views/Sellers/Index.cshtml
@@ -2,6 +2,8 @@
 
 <h2>Sellers</h2>
 
+<p> <a asp-action="Create" class="btn btn-default"> Create new </a> </p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="success">
